<resources>
    <string name="app_name">Trips</string>
    <string name="travelBud">Find Buddies</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_cart">Cart</string>
    <string name="action_contact">Contact</string>
    <string name="hint">Arriving</string>
    <string name="lstName">Last Name:</string>
    <string name="fstName">First Name:</string>
    <string name="email">Email:</string>
    <string name="zip">Zip:</string>
    <string name="ccTyp">Type:</string>
    <string name="ccNbr">Card Number</string>
    <string-array name="cards">
    <item>Mastercard</item>
    <item>American Express</item>
    <item>Discover Card</item>
    <item>Visa</item>
    <item>Diners Club</item>
    </string-array>
    <string-array name="cities">
        <item>Montgomery, AL</item>
        <item>Little Rock, AR</item>
        <item>Phoenix, AZ</item>
        <item>Sacramento, CA</item>
        <item>Denver, CO</item>
        <item>Harrford, CT</item>
        <item>Dover, DE</item>
        <item>Washington, DC</item>
        <item>Tallahasse, FL</item>
        <item>Atlanta, GA</item>
        <item>Hawaii, HI</item>
        <item>Bosie, ID</item>
        <item>Chicago, IL</item>
        <item>Indianapolis, IN</item>
        <item>Des Moines, IA</item>
        <item>Frankfort, KS</item>
        <item>Topeka, KY</item>
        <item>Baton Rogue, LA</item>
        <item>Augusta, ME</item>
        <item>Annapolis, MD</item>
        <item>Boston, MA</item>
        <item>Detroit, MI</item>
        <item>Saint Paul, MN</item>
        <item>Jefferson City, MS</item>
        <item>Helena, MO</item>
        <item>Jackson, MT</item>
        <item>Lincon, NE</item>
        <item>Carson City, NV</item>
        <item>Concord, NH</item>
        <item>Trenton, NJ</item>
        <item>Santa Fe, NM</item>
        <item>Albany, NY</item>
        <item>Raleigh, NC</item>
        <item>Bismark, ND</item>
        <item>Columus, OH</item>
        <item>Oklahoma City, OK</item>
        <item>Salem, OR</item>
        <item>Harrisburg, PA</item>
        <item>Providence, RI</item>
        <item>Columbia, SC</item>
        <item>Pierre, SD</item>
        <item>Nashville, TN</item>
        <item>Austin, TX</item>
        <item>Salt Lake City, UT</item>
        <item>Montpelier, VT</item>
        <item>Virginia, VA</item>
        <item>Olympia, WA</item>
        <item>Charleston, WV</item>
        <item>Madison, WI</item>
        <item>Cheyenne, WY</item>
    </string-array>

    <string-array name="visiting_cities">
        <item>Lima</item>
        <item>Cuzco</item>
        <item>Nazca</item>
        <item>Arequipa</item>
        <item>Iquitos</item>
        <item>Puno</item>
        <item>Ica</item>
    </string-array>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="travelBuddy"><b><u>Find a Travel Buddy!</u></b></string>

    <string name="website"><b><u>Website!</u></b></string>

    <string name="map"><b><u>Map It!</u></b></string>

    <string name="gallery"><b><u>Gallery!</u></b></string>

    <string name="youtubeVid"><b><u>Watch a YouTube Video!</u></b></string>


    <string-array name="classes">
        <item>First Class</item>
        <item>Business Class</item>
        <item>Coach</item>
    </string-array>


    <string-array name="flyingTo">
        <item>Boston</item>
        <item>Chicago</item>
        <item>New York</item>
    </string-array>
    <string name="title_activity_find_abuddy">FindABuddyActivity</string>
    <string name="title_activity_find_buddy">FindBuddyActivity</string>
    <string name="title_activity_buddy_lay">BuddyLayActivity</string>
    <string name="title_activity_hotel_upgrade">HotelUpgradeActivity</string>
    <string name="title_activity_choose">ChooseActivityActivity</string>
    <string name="arnold_schwarzenegger"><b><i>Arnold Schwarzenegger</i></b></string>
    <string name="about_arnold_schwarzenegger">Arnold is a very successful bodybuilder, actor and politician. He will enlighten you with insight on how to flex your bex! He will teach you the mindset of successful actors. He will also teach you how to detect a lie! Pick him now!</string>
    <string name="tim_cook"><b><i>Tim Cook</i></b></string>
    <string name="about_tim_cook">Tim is a genius. He is a successful programmer, a successful
        business man and a great public speaker. He will show you all the features of the IPhone that you do not know about.
        He will also teach you how to take care of your business. Pick him. </string>

    <string name="trump_hotel"><b><i>Trump Hotel</i></b></string>
    <string name="hilton_hotel"><b><i>Hilton Hotel</i></b></string>
    <string name="flying_from"><u>Flying From:</u></string>
    <string name="flying_to"><u>Flying To:</u></string>
    <string name="lima_activity_title"><b><u>Temple of Pachacamac in Lima!</u></b></string>
    <string name="nazca_activity_title"><b><u>Cementerio Chauchilla in Nacza!</u></b></string>


    <string name="about_trump_hotel">The Trump Hotel Collection offers a lifestyle where you can do more,
        experience more and live life without boundaries, limits or compromise. With destinations in New York
        (Central Park and SoHo), Chicago, Las Vegas, Panama, Toronto, Waikiki - each hotel is renowned for its location
        and architecture. Defined by a distinctly residential atmosphere, expansive rooms, lavish spa and fitness
        facilities, endless views and flawless comfort</string>
    <string name="about_hilton_hotel">Hilton Hotels and Resorts is Hilton Worldwide
        flagship brand and one of the largest hotel brands in the world. The brand is targeted
        at both business and leisure travelers with locations in major city centers, near airports,
        convention centers, and popular vacation destinations around the world.</string>
    <string name="about_lima_activity">Join a half day tour to the famous Pachacamac Temple, located only a short distance from Lima.
        Built by different leaders throughout the centuries and between the years 200 and 1450 AD, this religious compound is made
        entirely out of clay and houses the giant pyramids of the sun and moon. This comprehensive sightseeing tour will give you an
        insight on the culture, history and architecture of both the Inca and pre-Inca people.
    </string>

    <string name="about_nazca_activity">Spookies place in Nazca. This cemetery was discovered in the 1920s, but had
    not been used since the 9th century AD. The cemetery includes many important burials over a period of 600 to 700 years. The start of the interment
    was in about 200AD. It is important as a source of archaeology to Nazca culture. </string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="bookItDate1"></string>
    <string name="bookItDate2"></string>
    <string name="bookItDate3"></string>
    <string name="title_activity_shoping_cart">ShopingCartActivity</string>
</resources>