<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.ui.cbrobbi.com.trips.HotelUpgradeActivity"
    android:background="@drawable/main_page_background_design">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Upgrade Your Hotel!"
                        android:id="@+id/mainpage_title"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textSize="30dp"
                        android:textColor="#039"
                        android:shadowColor="#3524cc"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView8"
                        android:src="@drawable/trump" />
                    // android:src="@drawable/trump"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"                        android:maxHeight="200dp"
                    android:maxWidth="130dp"
                    android:layout_marginRight="10dp" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/trump_hotel"
                            android:id="@+id/textView22" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_trump_hotel"
                            android:id="@+id/textView23" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/website"
                        android:id="@+id/webClick1"
                        android:onClick="prcoessFour"
                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/map"
                        android:id="@+id/mapClick1"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/gallery"
                        android:id="@+id/galleryClick1"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/youtubeVid"
                        android:id="@+id/youtubeClick1"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="15dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upgrade"
                        android:id="@+id/upgrade1"
                        android:gravity="center|center_horizontal"
                        android:nestedScrollingEnabled="true"
                        android:background="@drawable/button_design"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageViewForAppS1" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@android:color/black"
                    android:layout_marginBottom="15dp" />



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView99"
                        android:src="@drawable/hiltonhotel"
                        android:layout_weight="1" />
                    //android:src="@drawable/hiltonhotel"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"                        android:maxHeight="200dp"
                    android:maxWidth="130dp"
                    android:layout_marginRight="10dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/hilton_hotel"
                            android:id="@+id/textView35" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/about_hilton_hotel"
                            android:id="@+id/textView36" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/website"
                        android:id="@+id/webClick2"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/map"
                        android:id="@+id/mapClick2"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/gallery"
                        android:id="@+id/galleryClick2"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/youtubeVid"
                        android:id="@+id/youtubeClick2"
                        android:onClick="prcoessFour"

                        android:layout_marginRight="13dp"
                        android:layout_weight=".3" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="15dp">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upgrade"
                        android:id="@+id/button8"
                        android:gravity="center|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageViewForAppS2" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>